rdb-sql/test/rdb/compile_fail/select_from_from.cpp
#include "test_fail.hpp"

void test() {
  select(p.id).from(p).from(p);
}

